1.0b8
-----
* In path formats, $albumartist now falls back to $artist (as well as
  the other way around).
* Fix adding individual tracks in BPD.

1.0b7
-----
* "Various artists" releases are handled much more gracefully. The
  autotagger now sets the "comp" flag on albums whenever the album is
  identified as a "various artists" release by MusicBrainz. Also,
  there is now a distinction between the "album artist" and the "track
  artist", the latter of which is never "Various Artists" or other such
  bogus stand-in. (Thanks to Jonathan Buchanan for the bulk of the
  implementation!)
* The directory hierarchy can now be customized based on release type.
  In particular, the "path_format" setting in .beetsconfig has been
  replaced with a new [paths] section, which allows you to specify
  different path formats for normal releases, "compilation" releases,
  and every release type (see below). The default path formats have
  been changed to use $albumartist instead of $artist. More information
  about this change is available on the wiki.
* A new "albumtype" field reflects the release type as specified by
  MusicBrainz: http://wiki.musicbrainz.org/ReleaseType
* When deleting files, beets now appropriately "prunes" the directory
  tree -- empty directories are automatically cleaned up. (Thanks to
  wlof on GitHub for this!)
* When importing with the "delete" option and importing files that are
  already at their destination, files could be deleted (leaving zero
  copies afterward). This is fixed.
* Always show album directory in tagger output.
* "import -l" now logs duplicate albums.
* A new "import_resume" option can be used to disable the importer's
  resuming feature or force it to resume without asking. This option
  may be either "yes", "no", or "ask", with the obvious meanings. The
  -p and -P command-line flags override this setting and correspond to
  the "yes" and "no" settings.
* Resuming is automatically disabled when the importer is in quiet (-q)